--- a/Languages/module.pot
+++ b/Languages/module.pot
@@ -25,37 +25,4 @@ msgstr ""
 "X-Poedit-SearchPathExcluded-0: *.css\n"
 "X-Poedit-SearchPathExcluded-1: *.html\n"
 "X-Poedit-SearchPathExcluded-2: *.json\n"
-
-#: Media.php:43
-msgctxt "module"
-msgid "Media Manager"
-msgstr ""
-
-#: Media.php:52
-msgctxt "module"
-msgid ""
-"Module to make application support media & file "
-"attachments"
-msgstr ""
-
-#: Uploader/Abstracts/AbstractUploader.php:128
-msgctxt "module"
-msgid "File does not have file name"
-msgstr ""
-
-#: Uploader/Abstracts/AbstractUploader.php:143
-#, php-format
-msgctxt "module"
-msgid "Could not determine file type from mimetype %s"
-msgstr ""
-
-#: Uploader/Abstracts/AbstractUploader.php:259
-msgctxt "module"
-msgid "Could not save uploaded file"
-msgstr ""
-
-#: Uploader/Abstracts/AbstractUploader.php:271
-msgctxt "module"
-msgid ""
-"Could not save uploaded file & determine target file."
-msgstr ""
+"X-Poedit-SearchPathExcluded-3: *.json\n"
